# moviebox-api

./: .gitignore  Avatar- English.srt  Makefile  README.md  Titanic- English.srt  mkdocs.yml  nuxt-test-1 copy.py  nuxt-test-1.py  pyproject.toml  titanic-info.json
.forgejo/workflows/: tests.yml
assets/data/: movie.page  tv_series.page
assets/recons/: README3.md
assets/recons1/: COMBINED.md  homepage.json
assets/recons2/: custom_search_results.json  downloadable-file-details-movie.json  downloadable-file-details-series.json  search_results.json
docs/: index.md  installation.md
docs/v1/: cli.md  introduction.md  movies.md  tv_series.md
docs/v3/: cli.md
recons/: README.md  cookies.json
recons/movies/: README.md  caption-en.srt  headers.json  index.html  test.srt
recons/movies.0/: README.md  titanic-page-details.html
recons/series/: merlin-page-details.html
src/: download-movie-cli.py  download-series-cli.py  recons.py  test_auto_download.py  test_download_movie.py  test_download_series.py  test_recon.py
src/moviebox_api/: __init__.py  _bases.py  console.py  constants.py  core.py  download.py  exceptions.py  helpers.py  models.py  requests.py  search.py  stream.py  utils.py
tests/: __init__.py  test_auto.py  test_auto_download.py  test_cli.py  test_core.py  test_download.py  test_download_captions.py  test_download_movie.py  test_homepage.py  test_item_details.py  test_search.py
tests/cli/: test_commands.py
tests/core/: test_item_details.py  test_item_details_sync.py  test_others.py  test_others_sync.py  test_popular_search.py  test_search.py  test_search_sync.py
tests/download/: test_using_search_results.py  test_using_search_results_sync.py
tests/extractors/: __init__.py  test_json.py  test_model.py  test_movies.py  test_tag.py
(+114 files in other folders)
