[project]
name = "moviebox-api"
version = "0.1.0"
description = "Search and download movies, tv series, their subtitles & cover photos etc."
readme = "README.md"
authors = [
    { name = "smartwa", email = "smartwacaleb@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "tqdm>=4.67.1",
]

[project.scripts]
moviebox-api = "moviebox_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
