[project]
name = "moviebox-api"
version = "0.1.0"
description = "Unofficial wrapper for moviebox.ph - search, discover and download movies, tv-series and their subtitles."
readme = "README.md"
authors = [
    { name = "smartwa", email = "smartwacaleb@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[project.scripts]
moviebox-api = "moviebox_api.cli:main"
moviebox = "moviebox_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
cli = [
    "click>=8.2.1",
    "tqdm>=4.67.1",
]
